calculator window overflowing fix, minor styling fixes

--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,13 @@
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    height: 100vh;
+}
+
+html {
+    overflow: hidden;
+    height: 100vh;
 }
